...
  /// A list of this localizations delegate's supported locales.
  static const List<Locale> supportedLocales = <Locale>[Locale('en')];

  /// No description provided for @appTitle.
  ///
  /// In en, this message translates to:
  /// **'Taskzilla'**
  String get appTitle;

  /// No description provided for @registerSubHeader.
  ///
  /// In en, this message translates to:
  /// **'Curabitur non elit ut libero tristique sodales. Mauris a lacus. Donec mattis semper leo.'**
...
